fixed sign in, sign up on mobile

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -557,7 +557,7 @@ background-color: gold;
 	}
 	#navLinkActive{
 		width: 100%;
-		height: 40px;
+		height: 35px;
 		padding-top: 5px;
 		padding-bottom: 5px;
 				font-size: 15px;
@@ -593,8 +593,11 @@ background-color: gold;
 	#page{
 		padding-top: 75px;
 	}
+	#loginForm{
+		width: 70vw;
+		text-align: center;
+	}
 	#username{
-		left: 0;
 	}
 	#username:hover{
 	zoom: 1;
